FBL update shield/parry template

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -24,6 +24,7 @@
             <li>Updated all image links to point to the images located on roll20's github repo.</li>
             <li>Updated Armor and Shield Misc modifier to adjust Skill dice, not Gear dice.</li>
             <li>Fixed negative skill dice bug.</li>
+            <li>Updated shield shove/parry roll template.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
@@ -2423,6 +2424,21 @@
                     </div>
                 {{/armor2-name}}
 
+                {{#shield1-name}}
+                    <div class="template-grid-item template-span-six">
+                        <span><b>{{shield1-name}}</b></span>
+                    </div>
+                    <div class="template-grid-item template-span-six condensed">
+                        {{#shield1-base}}<span class="label" data-i18n="attr-abbr">ATTR</span>:&nbsp;
+                        {{shield1-base}}{{/shield1-base}}&nbsp;
+                        {{#shield1-skill}}<span class="label" data-i18n="skill">Skill</span>:&nbsp;
+                        {{shield1-skill}}{{/shield1-skill}}&nbsp;
+                        {{#shield1-bonus}}<span class="label" data-i18n="bonus-abbr">BON</span>:&nbsp;{{shield1-bonus}}{{/shield1-bonus}}
+                        {{#shield1-bonus-max}}/{{shield1-bonus-max}}{{/shield1-bonus-max}}
+                        {{#shield1-bonus-misc}}&nbsp;&#177;&nbsp;<span class="label" data-i18n="misc-abbr">Misc</span>:&nbsp;{{shield1-bonus-misc}}{{/shield1-bonus-misc}}
+                    </div>
+                {{/shield1-name}}
+
 <!--- spell -->
                 <div class="template-grid-item template-span-six condensed">
                     {{#willpower-total}}<span class="label" data-i18n="willpower-total-abbr">Total WP</span>:&nbsp;{{willpower-total}}{{/willpower-total}}
@@ -2456,10 +2472,10 @@
                 <div class="template-grid-item template-span-six template-footer">{{footer}}</div>
             {{/footer}}
 
-            {{#allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total}}
+            {{#allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total shield1-name shield1-base shield1-skill shield1-bonus shield1-bonus-max shield1-bonus-misc}}
             <div class="template-grid-item template-span-half"><span>**{{key}}**:</span></div>
             <div class="template-grid-item template-span-2nd-half"><span>{{value}}</span></div>
-            {{/allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total}}
+            {{/allprops() character_name name character_id name_link subtitle free-text footer attribute-die-one attribute-die-two attribute-die-three attribute-die-four attribute-die-five attribute-die-six attribute-die-seven attribute-die-eight attribute-die-nine attribute-die-ten attribute-die-eleven attribute-die-twelve skill-die-one skill-die-two skill-die-three skill-die-four skill-die-five skill-die-six skill-die-seven skill-die-eight skill-die-nine skill-die-ten negative-die-one negative-die-two negative-die-three gear-die-one gear-die-two gear-die-three gear-die-four gear-die-five gear-die-six gear-die-seven gear-die-eight gear-die-nine gear-die-ten gear-die-eleven gear-die-twelve artifact-die-eight artifact-die-ocho artifact-die-ten artifact-die-twelve attribute-roll-one attribute-roll-two attribute-roll-three attribute-roll-four attribute-roll-five attribute-roll-six attribute-roll-seven attribute-roll-eight attribute-roll-nine attribute-roll-ten attribute-roll-eleven attribute-roll-twelve skill-roll-one skill-roll-two skill-roll-three skill-roll-four skill-roll-five skill-roll-six skill-roll-seven skill-roll-eight skill-roll-nine skill-roll-ten negative-roll-one negative-roll-two negative-roll-three gear-roll-one gear-roll-two gear-roll-three gear-roll-four gear-roll-five gear-roll-six gear-roll-seven gear-roll-eight gear-roll-nine gear-roll-ten gear-roll-eleven gear-roll-twelve artifact-roll-eight artifact-roll-ocho artifact-roll-ten artifact-roll-twelve consumable-die-six consumable-die-eight d66-die-one d66-roll-one d66-die-two d66-roll-two consumable-die-ten consumable-die-twelve consumable-roll-six consumable-roll-eight consumable-roll-ten consumable-roll-twelve push-query weapon-bonus weapon-bonus-max weapon-bonus-misc weapon-damage weapon-damage-misc attack-features weapon-range weapon-features attack-description spell-rank spell-willpower spell-range spell-duration spell-ingredients spell-description willpower-total armor1-name armor1-rating armor1-rating-max armor1-rating-misc armor2-name armor2-rating armor2-rating-max armor2-rating-misc armor1-rating-total armor2-rating-total shield1-name shield1-base shield1-skill shield1-bonus shield1-bonus-max shield1-bonus-misc}}
 
         </div>
     </div>
@@ -3311,14 +3327,18 @@
         /* set shield dice pool */
         on("clicked:shield-shove-roll", function () {
             clog('Change Detected: Shield Shove - button clicked');
-            getAttrs(['shield1_bonus_misc', 'shield1_bonus_total', 'melee', 'strength_total', 'shield1_name', 'shield1_artifact_die_ocho', 'shield1_artifact_die_eight', 'shield1_artifact_die_ten', 'shield1_artifact_die_twelve'], function (values) {
+            getAttrs(['shield1_bonus', 'shield1_bonus_max', 'shield1_bonus_misc', 'shield1_bonus_total', 'melee', 'strength_total', 'shield1_name', 'shield1_artifact_die_ocho', 'shield1_artifact_die_eight', 'shield1_artifact_die_ten', 'shield1_artifact_die_twelve'], function (values) {
                 const skill = int(values.melee),
+                    melee = int(values.melee),
+                    strength_total = int(values.strength_total),
                     strength = int(values.strength_total),
+                    shield1_bonus = int(values.shield1_bonus),
                     shield1_bonus_misc = int(values.shield1_bonus_misc),
+                    shield1_bonus_max = int(values.shield1_bonus_max),
                     shield1_bonus_total = int(values.shield1_bonus_total),
                     shield1_name = values.shield1_name,
                     shield1MiscSkill = Math.max((skill + shield1_bonus_misc),-3),
-                    shield1MiscGear = shield1_bonus_total - shield1_bonus_misc,
+                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc,
                     shield1_artifact_die_ocho = int(values.shield1_artifact_die_ocho),
                     shield1_artifact_die_eight = int(values.shield1_artifact_die_eight),
                     shield1_artifact_die_ten = int(values.shield1_artifact_die_ten),
@@ -3331,22 +3351,26 @@
                     artifact_die_eight: shield1_artifact_die_eight,
                     artifact_die_ten: shield1_artifact_die_ten,
                     artifact_die_twelve: shield1_artifact_die_twelve,
-                    current_preset: getTranslationByKey(`shove`) + ` - ${shield1_name}`,
-                    include_with_roll: ""
+                    current_preset: getTranslationByKey(`shove`) +` - ` +getTranslationByKey(`shield`),
+                    include_with_roll: `{{shield1-name=${shield1_name}}} {{shield1-base=${strength_total}}} {{shield1-skill=${melee}}} {{shield1-bonus=${shield1_bonus}}} {{shield1-bonus-max=${shield1_bonus_max}}} {{shield1-bonus-misc=${shield1_bonus_misc}}}`
                 });
             });
         });
     
         on("clicked:shield-roll", function () {
             clog('Change Detected: Shield Parry - button clicked');
-            getAttrs(['shield1_bonus_misc', 'shield1_bonus_total', 'melee', 'strength_total', 'shield1_name', 'shield1_artifact_die_ocho', 'shield1_artifact_die_eight', 'shield1_artifact_die_ten', 'shield1_artifact_die_twelve'], function (values) {
+            getAttrs(['shield1_bonus', 'shield1_bonus_max', 'shield1_bonus_misc', 'shield1_bonus_total', 'melee', 'strength_total', 'shield1_name', 'shield1_artifact_die_ocho', 'shield1_artifact_die_eight', 'shield1_artifact_die_ten', 'shield1_artifact_die_twelve'], function (values) {
                 const skill = int(values.melee),
+                    melee = int(values.melee),
+                    strength_total = int(values.strength_total),
                     strength = int(values.strength_total),
+                    shield1_bonus = int(values.shield1_bonus),
                     shield1_bonus_misc = int(values.shield1_bonus_misc),
+                    shield1_bonus_max = int(values.shield1_bonus_max),
                     shield1_bonus_total = int(values.shield1_bonus_total),
                     shield1_name = values.shield1_name,
                     shield1MiscSkill = Math.max((skill + shield1_bonus_misc),-3),
-                    shield1MiscGear = shield1_bonus_total - shield1_bonus_misc,
+                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc,
                     shield1_artifact_die_ocho = int(values.shield1_artifact_die_ocho),
                     shield1_artifact_die_eight = int(values.shield1_artifact_die_eight),
                     shield1_artifact_die_ten = int(values.shield1_artifact_die_ten),
@@ -3359,8 +3383,8 @@
                     artifact_die_eight: shield1_artifact_die_eight,
                     artifact_die_ten: shield1_artifact_die_ten,
                     artifact_die_twelve: shield1_artifact_die_twelve,
-                    current_preset: getTranslationByKey(`parry`) + ` - ${shield1_name}`,
-                    include_with_roll: ""
+                    current_preset: getTranslationByKey(`parry`) +` - ` +getTranslationByKey(`shield`),
+                    include_with_roll: `{{shield1-name=${shield1_name}}} {{shield1-base=${strength_total}}} {{shield1-skill=${melee}}} {{shield1-bonus=${shield1_bonus}}} {{shield1-bonus-max=${shield1_bonus_max}}} {{shield1-bonus-misc=${shield1_bonus_misc}}}`
                 });
             });
         });
