Forbidden Lands v1.63 updates
- date and ver change

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -1,4 +1,4 @@
-<!--2/23/20' set sheet version manually with currentVersion in sheetworkers-->
+<!--2/24/20' set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -17,20 +17,23 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">2/23/20'</span>
+        <span class="footer">2/24/20'</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
-            <span>v1.62</span>
-            <li>Added the 'IM Fell English' webfont to better match Forbidden Lands style.</li>
-            <li>Updated all image links to point to the images located on roll20's github repo.</li>
-            <li>Updated Armor and Shield Misc modifier to adjust Skill dice, not Gear dice.</li>
-            <li>Fixed negative skill dice bug.</li>
-            <li>Updated shield shove/parry roll template.</li>
+            <span>v1.63</span>
+            <li>working on stuff</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
         <span data-i18n-title="old-announcements">&nbsp;</span>
         <span class="announcements-older-show">
             <ol>
+                <span>v1.62</span>
+                <li>Added the 'IM Fell English' webfont to better match Forbidden Lands style.</li>
+                <li>Updated all image links to point to the images located on roll20's github repo.</li>
+                <li>Updated Armor and Shield Misc modifier to adjust Skill dice, not Gear dice.</li>
+                <li>Fixed negative skill dice bug.</li>
+                <li>Updated shield shove/parry roll template.</li>
+
                 <span>v1.61</span>
                 <li>fixed strength bug that reset strength to "0" for previously created characters.</li>
                 <li>fixed encumbrance calculation bug introduced in last update.</li>
@@ -2504,7 +2507,7 @@
     /* version tracking */
     var Sheet = Sheet || (function () {
     
-        let currentVersion = 1.62,
+        let currentVersion = 1.63,
     
             newAnnouncement = function (v) {
                 getAttrs(["version", "show_announcements"], function (values) {
