skills; misc, artifact, and notes

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -676,13 +676,29 @@
                             <h1 data-i18n="skill-u">SKILLS</h1>
                         </div>
                         <div class="skills-box2 column-header"><span data-i18n="lvl-abbr">Lvl</span></div>
-                        <div class="skills-box3 column-header"><span data-i18n="total-abbr">Tot</span></div>
+                        <div class="skills-box3 column-header"><span data-i18n="misc-skill-abbr">Misc Skill</span></div>
+                        <div class="skills-box4 column-header"><span data-i18n="total-abbr">Tot</span></div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="animal-handling">
                         <button type="action" name="act_dice_pool_animal_handling" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="animal-handling">Animal Handling</span>&nbsp;(<span class="small-caps" data-i18n="empathy-abbr">Emp</span>&nbsp;<span name="attr_empathy_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_animal_handling" value="0" min="0" title="@{animal_handling}" />
+                        <select class="input" name="attr_animal_handling_skill_misc" title="@{animal_handling_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_animal_handling_total" value="0" title="@{animal_handling_total}" readonly />
-<!-- FUTURE UPDATE... expand 2nd row
+<!-- expand 2nd row -->
                         <input class="expand" type="checkbox" name="attr_expand_animal_handling" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
 
                         <div class="animal-handling-row2 skills-row2">
@@ -694,14 +710,14 @@
                                 <div class="skills-box9 column-header"><span>D12</span></div>
                             </div>
                             <div class="skills-row2-body">
-                                <span class="skills-box5"></span>
+                                <textarea class="skills-box5 input-textarea" name="attr_animal_handling_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{animal_handling_notes}"></textarea>
                                 <input class="skills-box6 sheet-input" type="checkbox" name="attr_animal_handling_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty">
                                 <input class="skills-box7 sheet-input" type="checkbox" name="attr_animal_handling_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty">
                                 <input class="skills-box8 sheet-input" type="checkbox" name="attr_animal_handling_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
                                 <input class="skills-box9 sheet-input" type="checkbox" name="attr_animal_handling_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
                             </div>
                         </div>
- -->
+<!-- 2nd row -->
                     </span>
                     <span class="skills-row" data-i18n-list-item="crafting">
                         <button type="action" name="act_dice_pool_crafting" class="toggle-monster-only" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="crafting">Crafting</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
