bug fixes in skills & core weapons

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -429,6 +429,7 @@
                 </select>
               </div>
               <fieldset class="repeating_active">
+                <input name="attr_display" type="hidden"/>
                 <input name="attr_display_rating" type="hidden"/>
                 <input name="attr_display_specialization" type="hidden" value=""/>
                 <input name="attr_display_limit" type="hidden" value="Physical"/>
@@ -581,6 +582,7 @@
           <div class="skills-know">
             <div class="rows repeating-container">
               <fieldset class="repeating_knowledge">
+                <input name="attr_display" type="hidden"/>
                 <input name="attr_display_rating" type="hidden"/>
                 <input name="attr_display_specialization" type="hidden" value=""/>
                 <input name="attr_display_limit" type="hidden" value="Mental"/>
@@ -639,6 +641,7 @@
           <div class="skills-lang">
             <div class="rows repeating-container">
               <fieldset class="repeating_language">
+                <input name="attr_display" type="hidden"/>
                 <input name="attr_display_rating" type="hidden"/>
                 <input name="attr_display_specialization" type="hidden" value=""/>
                 <input name="attr_display_limit" type="hidden" value="Social"/>
@@ -726,7 +729,7 @@
 			</div>
 			<div class="row-long cc-row">
 				<h2 data-i18n="primaryrangedweapon">Primary Ranged Weapon</h2>
-				<button type="roll" name="primary range" value="@{gm_toggle} &{template:rolls}{{header=@{primary_range_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_range_weapon_skill}+@{primary_range_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{primary_range_weapon_mode}, ACC @{primary_range_weapon_acc}, DV @{primary_range_weapon}, AP @{primary_range_weapon_ap}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary range weapon"><span name="attr_primary_range_weapon" title="@{primary_range_weapon}"></span></button>
+				<button type="roll" name="primary range" value="@{gm_toggle} &{template:rolls}{{header=@{primary_range_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_range_weapon_skill}+@{primary_range_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{primary_range_weapon_mode}, ACC @{primary_range_weapon_acc}, DV @{primary_range_weapon_damage}, AP @{primary_range_weapon_ap}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary range weapon"><span name="attr_primary_range_weapon" title="@{primary_range_weapon}"></span></button>
 				<!-- Ammo removal button -->
 				<button name="act_shots_remove" type="action">4</button>
 				<button type="action" name="act_primary_ammo" title="Shots Fired">
@@ -735,7 +738,7 @@
 				<button name="act_shots_add" type="action">4</button>
 			</div>
 			<div class="cc-row">
-				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_range_weapon" title="@{primary_range_weapon}"></span>
+				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_range_weapon_damage" title="@{primary_range_weapon}"></span>
 				<h3 data-i18n="acc">ACC</h3><span name="attr_primary_range_weapon_acc" title="@{primary_range_weapon_acc}"></span>
 				<h3 data-i18n="ap">AP</h3><span name="attr_primary_range_weapon_ap" title="@{primary_range_weapon_ap}"></span>
 				<h3 data-i18n="mode">Mode</h3><span name="attr_primary_range_weapon_mode" title="@{primary_range_weapon_mode}"></span>
@@ -747,11 +750,11 @@
 			</div>
 			<div class="row-long cc-row">
 				<h2 data-i18n="primarymeleeweapon">Primary Melee Weapon</h2>
-				<button type="roll" name="primary melee" value="@{gm_toggle} &{template:rolls}{{header=@{primary_melee_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_melee_weapon_skill}+@{primary_melee_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=ACC @{primary_melee_weapon_acc}, DV @{primary_melee_weapon}, AP @{primary_melee_weapon_ap}, Reach @{primary_melee_weapon_reach}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary melee weapon"><span name="attr_primary_melee_weapon" title="@{primary_melee_weapon}"></span></button>
+				<button type="roll" name="primary melee" value="@{gm_toggle} &{template:rolls}{{header=@{primary_melee_weapon}}}{{base=^{base}}}{{dice=[[((@{primary_melee_weapon_skill}+@{primary_melee_weapon_dicepool}+@{agility})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=ACC @{primary_melee_weapon_acc}, DV @{primary_melee_weapon_damage}, AP @{primary_melee_weapon_ap}, Reach @{primary_melee_weapon_reach}}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Primary melee weapon"><span name="attr_primary_melee_weapon" title="@{primary_melee_weapon}"></span></button>
 			</div>
 			<div class="cc-row">
 				<h3 data-i18n="reach">Reach</h3><span name="attr_primary_melee_weapon_reach" title="@{primary_melee_weapon_reach}"></span>
-				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_melee_weapon" title="@{primary_melee_weapon}"></span>
+				<h3 data-i18n="dam">Dam</h3><span name="attr_primary_melee_weapon_damage" title="@{primary_melee_weapon}"></span>
 				<h3 data-i18n="acc">ACC</h3><span name="attr_primary_melee_weapon_acc" title="@{primary_melee_weapon_acc}"></span>
 				<h3 data-i18n="ap">AP</h3><span name="attr_primary_melee_weapon_ap" title="@{primary_melee_weapon_ap}"></span>
 			</div>
@@ -3687,6 +3690,13 @@ const onepointthreefive = () => {
 	on("change:host_rating change:data_processing change:pilot change:intuition change:matrix_mod_modifier change:level change:matrix_dice_modifier change:edge_toggle", () => {
 		updateMatrixInitiative()
 	});
+
+//	sheetAttribues.repeatingSkills.forEach(field => {
+//		on(`change:repeating_${field}`, eventinfo => { 
+//			const id = eventinfo.sourceAttribute.split(`_`)[2];
+//		});
+//    }); 
+  
 	const translations = () => {
 		const attributes = sheetAttribues.translationsAttributes;
 		const translations = getTranslations(attributes);
@@ -4137,13 +4147,10 @@ const onepointthreefive = () => {
 		});
 
 	//REFACTORED Skills
-  	['repeating_active','repeating_knowledge','repeating_language'].forEach(field => {
-        on(`change:${field}`, eventinfo => { 
+  	sheetAttribues.repeatingSkills.forEach(field => {
+        on(`change:repeating_${field}`, eventinfo => { 
 			const source = eventinfo.sourceAttribute;
 			const type   = eventinfo.sourceType;
-
-			console.log(eventinfo);
-
         	if (source.includes("rating")) {
         		getAttrs([`${field}_rating`, `${field}_rating_modifier`], (v) => {
         			const bas = parseInt(v[`${field}_rating`]) || 0;
@@ -4180,16 +4187,20 @@ const onepointthreefive = () => {
 					const size  = bas.length;
 					let display = (size > 0 && size <= 20) ? `(${bas})` : (size > 20 ) ? "(" + bas.slice(0, 20) + "...)" : " ";
         			setAttrs({
-                       [`${field}_display_specialization`]: display
+                       [`${eventinfo.triggerName}_display_specialization`]: display
                     });
         		});
         	} else if (source.includes("skill") && type === "player") {
                 getAttrs([`${source}`], (v) => {
+                	console.log(eventinfo)
 					const bas   = v[`${source}`];
 					const size  = bas.length;
 					let display = (size > 0 && size <= 20) ? bas : (size > 20 ) ? bas.slice(0, 20) + "..." : " ";
+
+					console.log(display)
+					console.log(field)
                     setAttrs({
-                       [`${field}_display`]: display
+                       [`${eventinfo.triggerName}_display`]: display
                     });
                 });
             } else if (source.includes("dicepool") && type === "player") {
